docs/apache-airflow-providers-amazon/8.1.0/_sources/_api/airflow/providers/amazon/aws/hooks/redshift_data/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.hooks.redshift_data`
==========================================================

.. py:module:: airflow.providers.amazon.aws.hooks.redshift_data


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.redshift_data.RedshiftDataHook




.. py:class:: RedshiftDataHook(*args, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsGenericHook`\ [\ :py:obj:`mypy_boto3_redshift_data.RedshiftDataAPIServiceClient`\ ]

   Interact with Amazon Redshift Data API.
   Provide thin wrapper around
   :external+boto3:py:class:`boto3.client("redshift-data") <RedshiftDataAPIService.Client>`.

   Additional arguments (such as ``aws_conn_id``) may be specified and
   are passed down to the underlying AwsBaseHook.

   .. seealso::
       - :class:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`
       - `Amazon Redshift Data API         <https://docs.aws.amazon.com/redshift-data/latest/APIReference/Welcome.html>`__

   .. py:method:: execute_query(database, sql, cluster_identifier = None, db_user = None, parameters = None, secret_arn = None, statement_name = None, with_event = False, wait_for_completion = True, poll_interval = 10)

      Execute a statement against Amazon Redshift

      :param database: the name of the database
      :param sql: the SQL statement or list of  SQL statement to run
      :param cluster_identifier: unique identifier of a cluster
      :param db_user: the database username
      :param parameters: the parameters for the SQL statement
      :param secret_arn: the name or ARN of the secret that enables db access
      :param statement_name: the name of the SQL statement
      :param with_event: indicates whether to send an event to EventBridge
      :param wait_for_completion: indicates whether to wait for a result, if True wait, if False don't wait
      :param poll_interval: how often in seconds to check the query status

      :returns statement_id: str, the UUID of the statement


   .. py:method:: wait_for_results(statement_id, poll_interval)


   .. py:method:: get_table_primary_key(table, database, schema = 'public', cluster_identifier = None, db_user = None, secret_arn = None, statement_name = None, with_event = False, wait_for_completion = True, poll_interval = 10)

      Helper method that returns the table primary key.

      Copied from ``RedshiftSQLHook.get_table_primary_key()``

      :param table: Name of the target table
      :param database: the name of the database
      :param schema: Name of the target schema, public by default
      :param sql: the SQL statement or list of  SQL statement to run
      :param cluster_identifier: unique identifier of a cluster
      :param db_user: the database username
      :param secret_arn: the name or ARN of the secret that enables db access
      :param statement_name: the name of the SQL statement
      :param with_event: indicates whether to send an event to EventBridge
      :param wait_for_completion: indicates whether to wait for a result, if True wait, if False don't wait
      :param poll_interval: how often in seconds to check the query status

      :return: Primary key columns list



